# AcaEngine

./: .gitmodules  CMakeLists.txt  ErsteÜberlegungen.md
resources/shader/: light.frag  light.vert  model.frag  model.vert  sprite.geom
src/: main.cpp
src/engine/game/components/: components2D.hpp  lights.hpp  model.hpp  simpleComponents.hpp
src/engine/game/core/: Query.cpp  TypeInfo.cpp  component.hpp  componentaccess.hpp  entity.hpp  game.cpp  game.hpp  gamestate.hpp  lifetimeManager.cpp  lifetimeManager.hpp  lifetimeManager2.cpp  lifetimeManager2.hpp  registry.hpp  registry2.cpp  registry2.hpp  weakcomponentvector.cpp  weakcomponentvector.hpp  world.hpp
src/engine/game/core/registry/: ArcheType.h  ArcheType.hpp  ArcheTypeRegistry.h  ArcheTypeRegistry.hpp  Entity.h  Query.h  Query.hpp  TypeArray.h  TypeArray.hpp  TypeInfo.h  TypeInfo.hpp  types.h
src/engine/game/operations/: addPointLights.hpp  applyVelocity.cpp  applyVelocity.hpp  destroyHits.hpp  drawModels.cpp  drawModels.hpp  drawSprites.cpp  drawSprites.hpp  drawText.cpp  drawText.hpp  insertBoundsInOctree.hpp  movement2D.cpp  movement2D.hpp  processLifetime.cpp  processLifetime.hpp  updateTransform.cpp  updateTransform.hpp
src/engine/game/systems/: hud.cpp  hud.hpp  hudActors.cpp  hudActors.hpp  hudComponents.cpp  hudComponents.hpp  transforms.cpp  transforms.hpp
src/engine/graphics/: camera.cpp  camera.hpp
src/engine/graphics/core/: color.cpp  color.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  geometrybuffer.cpp  geometrybuffer.hpp  opengl.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexformat.hpp
src/engine/graphics/renderer/: fontrenderer.cpp  fontrenderer.hpp  mesh.cpp  mesh.hpp  meshrenderer.cpp  meshrenderer.hpp  spriterenderer.cpp  spriterenderer.hpp
src/engine/input/: inputmanager.cpp  inputmanager.hpp  keyboardInterface.cpp  keyboardInterface.hpp  keys.hpp
src/engine/math/: geometrictypes.hpp  glmext.hpp  random.cpp  random.hpp  xoshiro.hpp
src/engine/utils/: alignment.hpp  blockalloc.hpp  config.hpp  meshLoader.cpp  meshLoader.hpp  metaProgHelpers.hpp  resourcemanager.hpp  typeIndex.cpp  typeIndex.hpp
src/engine/utils/containers/: hashmap.hpp  iteratorrange.hpp  octree.hpp  pointbin.hpp  slotmap.hpp  slotmap2.hpp  weakSlotMap.hpp
src/game/actions/: applyVelocity.cpp  applyVelocity.hpp  drawModels.cpp  drawModels.hpp  drawSprites.cpp  drawSprites.hpp  processLifetime.cpp  processLifetime.hpp  updateTransform.cpp  updateTransform.hpp
src/game/components/: 2dComponents.hpp  basicComponents.hpp  components2D.hpp  model.hpp  simpleComponents.hpp
src/game/core/: action.hpp  component.hpp  entity.hpp  game.cpp  game.hpp  gamestate.cpp  lifetimeManager.hpp  registry.hpp
src/game/operations/: applyVelocity.cpp  applyVelocity.hpp  drawModels.cpp  drawModels.hpp  drawSprites.cpp  drawSprites.hpp  movement2D.hpp  updateTransform.cpp  updateTransform.hpp
src/graphics/: camera.cpp  camera.hpp
src/graphics/core/: buffer.hpp  device.cpp  device.hpp  framebuffer.cpp  geometrybuffer.cpp  geometrybuffer.hpp  opengl.hpp  sampler.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/graphics/renderer/: fontrenderer.cpp  fontrenderer.hpp  mesh.cpp  mesh.hpp  meshrenderer.cpp  meshrenderer.hpp  spriterenderer.cpp  spriterenderer.hpp
src/input/: actions.hpp  inputmanager.hpp  keyboardInterface.cpp  keyboardInterface.hpp  keys.hpp
src/math/: geometrictypes.hpp  glmext.hpp
src/utils/: assert.hpp  meshLoader.cpp  meshLoader.hpp  metaProgHelpers.hpp  resourcemanager.hpp  scopedptr.hpp
src/utils/containers/: slotmap.hpp
tests/: CMakeLists.txt  test_meshdata_load.cpp  test_octree.cpp  test_registry.cpp  test_slotmap.cpp  testutils.hpp
